fix overflow problem with google chart on profile

--- a/css/main.css
+++ b/css/main.css
@@ -496,6 +496,7 @@ textarea {
     margin-top: 10px;
     border-radius: 5px;
     padding: 20px;
+    overflow: hidden;
 }
 
 .box section {
